welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:22: error: '(' expected but '{' found.
  else if {setPos(getX() +1, getY())}
          ^ZigZag:25: error: illegal start of simple expression
}
^